<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.scan.ResultScanActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/backgroud_button"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_view_detail_bank_sampah"
        android:layout_marginTop="10sp"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@drawable/ic_baseline_image_24" />

    <TextView
        android:id="@+id/classified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_detail_bank_sampah"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/classification_as"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classified"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#C30000"
        android:textSize="27sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confidencesText"
        android:text="@string/confidence_level"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/result"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:id="@+id/confidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confidencesText"
        android:layout_centerHorizontal="true"
        android:text="@string/list_accuration"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/detailTeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confidence"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="@string/detail"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_below="@+id/detailTeks"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="27dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="104dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="210dp"
            android:layout_marginBottom="9dp"
            android:text="@string/price"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailPerubahan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="91dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="-5dp"
            android:gravity="center"
            android:text="-"
            android:textColor="#009688"
            android:textSize="22sp" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="191dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="389dp"
        android:indeterminateDrawable="@drawable/custom_splash" />
</RelativeLayout>